Rewrite Java threading logic to Kotlin (#30)